@@ -24,7 +24,7 @@ compactprint = function(DT, topn=2) {
     print(copy(DT)[,(cn):=""], topn=topn)
     invisible()
 }
-test = function(num,x,y=NULL,error,warning,output) {
+test = function(num,x,y,error=NULL,warning=NULL,output=NULL) {
     # Usage:
     # i) tests that x equals y when both x and y are supplied, the most common usage
     # ii) tests that x is TRUE when y isn't supplied
@@ -42,10 +42,10 @@ test = function(num,x,y=NULL,error,warning,output) {
     .lasttest <<- num
     ntest <<- ntest + 1
     lastnum <<- num
-    err <- if (missing(output)) try(x,TRUE) else out<-paste(capture.output(try(x,TRUE)),collapse="")
-    if (!missing(error) || !missing(warning)) {
-        type = ifelse(!missing(error),"error","warning")
-        patt = txt = ifelse(!missing(error),error,warning)
+    err <- if (is.null(output)) try(x,TRUE) else out<-paste(capture.output(try(x,TRUE)),collapse="")
+    if (!is.null(error) || !is.null(warning)) {
+        type = ifelse(!is.null(error),"error","warning")
+        patt = txt = ifelse(!is.null(error),error,warning)
         patt = gsub("[(]","[(]",patt)
         patt = gsub("[)]","[)]",patt)
         patt = gsub("\\^","\\\\^", patt)  # for test 923 containing 2^31 in error message
@@ -56,22 +56,25 @@ test = function(num,x,y=NULL,error,warning,output) {
             cat("Test",num,"didn't produce correct",type,":\n")
             cat(">",deparse(substitute(x)),"\n")
             cat("Expected ",type,": '",txt,"'\n",sep="")
-            cat("Observed ",observedtype,": '",gsub("^[(]converted from warning[)] ","",gsub("\n$","",gsub("^Error.* : \n  ","",as.character(err)))),"'\n",sep="")
+            if (!inherits(err,"try-error"))
+                cat("Observed: no error or warning\n")
+            else
+                cat("Observed ",observedtype,": '",gsub("^[(]converted from warning[)] ","",gsub("\n$","",gsub("^Error.* : \n  ","",as.character(err)))),"'\n",sep="")
             nfail <<- nfail + 1
             whichfail <<- c(whichfail, num)
             return()
         }
         if (type=="warning")
-            err <- if (missing(output)) x<-try(suppressWarnings(x),TRUE) else out<-paste(capture.output(x<-try(suppressWarnings(x),TRUE)),collapse="")
+            err <- if (is.null(output)) x<-try(suppressWarnings(x),TRUE) else out<-paste(capture.output(x<-try(suppressWarnings(x),TRUE)),collapse="")
         else return()
     }
-    if (inherits(err,"try-error") || inherits(err<-try(y,TRUE),"try-error")) {
+    if (inherits(err,"try-error") || (!missing(y) && inherits(err<-try(y,TRUE),"try-error"))) {
         cat("Test",num,err)
         nfail <<- nfail + 1
         whichfail <<- c(whichfail, num)
         return()
     }
-    if (!missing(output)) {
+    if (!is.null(output)) {
         output = gsub("[[]","<LBRACKET>",output)
         output = gsub("[]]","<RBRACKET>",output)
         output = gsub("<LBRACKET>","[[]",output)
@@ -2356,8 +2359,14 @@ options(datatable.alloccol=old)
 # Now create the list from named objected
 DT1 = data.table(a=1:3, b=4:6)
 DT2 = data.table(c=7:9)
-l = list(DT1, DT2)   # TO DO: implement reflist(). Same as list() but doesn't copy named inputs.
-test(853, l[[1]][,d:=10:12], data.table(a=1:3,b=4:6,d=10:12), warning="Invalid .internal.selfref detected and fixed.*R's list.*copies named objects")  # correct and desired warning
+l = list(DT1, DT2)
+if (address(DT1) == address(l[[1L]])) {
+    # list() in base R no longer copies named inputs as from commit r63767 by Luke Tierney on 29 Aug 2013 (apx R3.0.2+). Yay!
+    w = NULL 
+} else {
+    w = "Invalid .internal.selfref detected and fixed.*R's list.*copies named objects" # Historical work around. Correct and desired warning.
+}
+test(853, l[[1]][,d:=10:12], data.table(a=1:3,b=4:6,d=10:12), warning=w)  
 test(855, l[[1]], data.table(a=1:3,b=4:6,d=10:12))
 
 # Test setnames on data.frame, #2273.
