@@ -45,4 +45,12 @@ SEXP setnamed(SEXP x, SEXP value)
     return(x);
 }
 
+SEXP address(SEXP x)
+{
+    // A better way than : http://stackoverflow.com/a/10913296/403310
+    char buffer[32];
+    snprintf(buffer, 32, "%p", (void *)x);
+    return(ScalarString(mkChar(buffer)));
+}
+
 
